Inserted spans in the HTML so that the print function on qr-search.html would print in larger text. Updates related CSS. Also fixed viewing so whole screen was visible on laptops.

--- a/services/flask/website/static/styles.css
+++ b/services/flask/website/static/styles.css
@@ -7,10 +7,11 @@
 
 
 .container {
-    height: 80vh;
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 600px;
+    margin: 0 auto;
     /*align-content: center;*/
     /*margin: 0;*/
     /*padding: 0;*/
@@ -465,13 +466,14 @@ a:hover {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 500px; /* Set a fixed height */
-    width: 1400px; /* Set a fixed width */
-    max-width: 100%; /* Allow it to be responsive up to 100% of the viewport width */
-    background: rgb(255, 255, 255, .4);
+    height: auto;
+    max-height: 500px;
+    width: 1400px;
+    max-width: 100%;
+    background: rgb(255, 255, 255, .5);
     border: 2px solid black;
-    margin: 0 auto; /* Center horizontally */
-    overflow: hidden;
+    border-bottom: 0;
+    margin: 0 auto;
 }
 
 .qr-search-div {
@@ -479,7 +481,7 @@ a:hover {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100px;
+    height: 50px;
     width: 1400px;
     max-width: 100%;
     background: rgba(0, 0, 0, 0.5);
@@ -487,7 +489,7 @@ a:hover {
     margin: 0 auto;
     margin-bottom: 20px;
     text-align: center;
-    padding-bottom: 3%;
+    padding-bottom: 4%;
     text-decoration-color: white;
 }
 
@@ -513,26 +515,33 @@ form, input, label, p {
 
 .qr-display-div {
     display: flex;
-    flex-direction: row; /* Change from column to row */
+    flex-direction: row;
     align-items: center;
     height: 150px;
     width: 1400px;
     max-width: 100%;
     max-height: 100%;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(255, 255, 255, 0.5);
     border: 2px solid black;
     border-top: 0;
     margin: 0 auto;
     margin-bottom: 20px;
     text-align: center;
     padding-top: 0.5%;
-    text-decoration-color: white;
-    padding-left: 600px;
+    text-decoration-color: #ffffff;
+    padding-left: 200px;
+    overflow-x: auto;
 }
 
-.qr-display-div img {
-    margin-right: 20px; /* Adjust the value to increase or decrease the space between the QR codes */
-}
+/*.qr-display-div img {*/
+/*    margin-right: 10px; !* Adjust the value to increase or decrease the space between the QR codes *!*/
+/*}*/
+
+/*.qr-display-div span {*/
+/*    font-size: 32px; !* Adjust the font size as needed *!*/
+/*    font-weight: bolder;*/
+/*    color: white;*/
+/*}*/
 
 .print-button {
     margin-left: 20px; /* Adjust the value to increase or decrease the space between the QR codes and the Print button */
@@ -546,7 +555,7 @@ p {
 .qr-table {
     text-align: center;
     font-size: 24px;
-    width: 1400px;
+    width: 1396px;
 }
 
 .qr-button {
@@ -579,14 +588,8 @@ p {
   background: linear-gradient(to right, #8dee37, #5EB00CFF, #75d324, #5EB00CFF);
 }
 
-/* Hide horizontal scrollbar */
+
 body {
-    overflow-x: hidden;
+    overflow-x: auto;
+    overflow-y: auto;
 }
-
-/* Hide vertical scrollbar */
-body {
-    overflow-y: hidden;
-}
-
-
